<resources>
    <string name="app_name">nucs</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="call_cab">call cab</string>
    <string name="image">image</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="logout">logout</string>
    <string name="history">history</string>
    <string name="settings">Settings</string>
    <string name="working">Working</string>
    <string name="destination">Destination: --</string>
    <string name="picked_customer">picked customer</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="car">Car</string>
    <string name="_4_seater">4 Seater</string>
    <string name="_6_seater">6 Seater</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>
    <string name="from_to">From - To</string>
    <string name="distance">distance</string>
    <string name="date">date</string>
    <string name="i_m_a_driver">I\'m a Driver</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="time">time</string>
    <string name="rideid">rideId</string>
    <string name="email">Email</string>
</resources>